# kaar

./: .gitignore  README.md  meson.build  net.hemish.kaar.json  net.hemish.kamm.json  python3-pytodotxt.json
data/: meson.build  net.hemish.kaar.desktop.in  net.hemish.kaar.gschema.xml  net.hemish.kaar.metainfo.xml.in  net.hemish.kamm.desktop.in  net.hemish.kamm.gschema.xml  net.hemish.kamm.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: enums.py  filtering.py  kaar.gresource.xml  kaar.in  kamm.gresource.xml  kamm.in  main.py  meson.build  model.py  net.hemish.kaar.metainfo.xml.in  preferences.py  preferences_window.py  pseudo_async.py  sorting.py  style.css  tab.py  todo  window.py
src/blp/: preferences.blp  tab.blp  task.blp  ui.blp
src/gtk/: help-overlay.ui
